[tool.poetry]
name = "pyslingshot"
version = "0.1.1"
description = "Python implementation of the Slingshot pseudotime algorithm"
authors = ["Jacob Moss <cob.mossy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mossjacob/pyslingshot"

[tool.poetry.dependencies]
python = "*"
matplotlib = "*"
numpy = "*"
seaborn = "*"
pcurvepy2 = "*"
tqdm = "*"
notebook = "*"
scikit-learn = "*"
networkx = "*"
anndata = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
